--- a/vacation_test.html
+++ b/vacation_test.html
@@ -45,10 +45,10 @@
 </form>
 <div class="row align-items-center">
 <div class="col-lg-auto" style="margin-top: 20px">
-  <p style="color: white" class="align-self-center"><a class="btn btn-primary"  role="button" onclick="selectVacationType()" href='#'>Проверить</a></p>
+  <p style="color: white" class="align-self-center"><a class="btn btn-primary" role="button" onclick="selectVacationType()">Проверить</a></p>
 </div>
 <div class="col-lg-auto" style="margin-top: 20px">
-  <p style="color: white"><a class="btn btn-danger"  role="button" onclick="reset()">Сбросить</a></p>
+  <p style="color: white"><a class="btn btn-danger" role="button" onclick="reset()">Сбросить</a></p>
 </div>
 <div class="col-md-8 alert alert-secondary" style="margin-top: 20px; padding-bottom: 6px; padding-top: 6px" id="result">Результат</div>
 </div>
