--- a/vacation_test.html
+++ b/vacation_test.html
@@ -17,15 +17,15 @@
 </div>
 <div class="row align-items-center">
 <div class="date col align-self-center"><h6>Введите дату начала</h6>
-<input type="date" id="start" class="form-control mr-sm-2" onchange="checkForm()"></input> 
+<input type="date" id="start" class="form-control mr-sm-2" onchange="globalVar()"></input> 
 <!-- <input type="time" id="start1"></input> -->
 </div>
 <div class="date col align-self-center"><h6>Введите дату окончания</h6>
-<input type="date" id="finish" class="form-control mr-sm-2" onchange="checkForm()"></input>
+<input type="date" id="finish" class="form-control mr-sm-2" onchange="globalVar()"></input>
 <!-- <input type="time" id="finish1"></input>
  --></div>
 <div class="select col align-self-center"><h6>Выберите сотрудника</h6>
-<select name = "user" required class="form-control mr-sm-2" onchange="checkForm()">
+<select name = "user" required class="form-control mr-sm-2" onchange="globalVar()">
 <option value="1">Иван Семенов</option>
 <option value="2">Ирина Таращук</option>
 <option value="3">Григорий Двинский</option>
