all absence functions are ready

--- a/index1.html
+++ b/index1.html
@@ -41,7 +41,7 @@
                             </div>
                             <div>
                                 <span>Выберите тип отпуска</span>
-                                <select name="type">
+                                <select name="type" onchange='selectHours()'>
                                     <option value="1">Обычный</option>
                                     <option value="2">За свой счёт</option>
                                     <option value="3">Больничный</option>
@@ -56,7 +56,7 @@
         </div>
         <div id='buttons'>
             <div class='button'>
-                <button onclick="" id='check'>Проверить</button>
+                <button onclick="selectVacationType()" id='check'>Проверить</button>
             </div>
             <div class='button'>
                 <button onclick="" id='reset'>Сбросить</button>
