--- a/index1.html
+++ b/index1.html
@@ -56,10 +56,10 @@
         </div>
         <div id='buttons'>
             <div class='button'>
-                <button onclick="selectVacationType()" id='check'>Проверить</button>
+                <button onclick="selectVacationType()" id='check'>Оформить</button>
             </div>
             <div class='button'>
-                <button onclick="" id='reset'>Сбросить</button>
+                <button onclick="main.reset()" id='reset'>Сбросить</button>
             </div>
             <div id="result"></div>
         </div>
