parse vacations and some cosmetic fixes

--- a/index1.html
+++ b/index1.html
@@ -61,7 +61,45 @@
             <div class='button'>
                 <button onclick="main.reset()" id='reset'>Сбросить</button>
             </div>
-            <div id="result"></div>
+        </div>
+        <div id="result">
+            <div class="table-vacation first-line">Сотрудник</div>
+            <div class="table-vacation first-line">Отпуск</div>
+            <div class="table-vacation first-line">За свой счет</div>
+            <div class="table-vacation first-line">Больничный</div>
+            <div class="table-vacation first-line">Личное</div>
+            <div class="table-vacation first-line">Командировка</div>
+            <div class="table-vacation second-line"></div>
+            <div class="table-vacation second-line"></div>
+            <div class="table-vacation second-line"></div>
+            <div class="table-vacation second-line"></div>
+            <div class="table-vacation second-line"></div>
+            <div class="table-vacation second-line"></div>
+            <div class="table-vacation third-line"></div>
+            <div class="table-vacation third-line"></div>
+            <div class="table-vacation third-line"></div>
+            <div class="table-vacation third-line"></div>
+            <div class="table-vacation third-line"></div>
+            <div class="table-vacation third-line"></div>
+            <div class="table-vacation fourth-line"></div>
+            <div class="table-vacation fourth-line"></div>
+            <div class="table-vacation fourth-line"></div>
+            <div class="table-vacation fourth-line"></div>
+            <div class="table-vacation fourth-line"></div>
+            <div class="table-vacation fourth-line"></div>
+            <div class="table-vacation fifth-line"></div>
+            <div class="table-vacation fifth-line"></div>
+            <div class="table-vacation fifth-line"></div>
+            <div class="table-vacation fifth-line"></div>
+            <div class="table-vacation fifth-line"></div>
+            <div class="table-vacation fifth-line"></div>
+            <div class="table-vacation sixth-line"></div>
+            <div class="table-vacation sixth-line"></div>
+            <div class="table-vacation sixth-line"></div>
+            <div class="table-vacation sixth-line"></div>
+            <div class="table-vacation sixth-line"></div>
+            <div class="table-vacation sixth-line"></div>
+
         </div>
     </div>
     <script src="script.js"></script>
