--- a/index1.html
+++ b/index1.html
@@ -66,7 +66,7 @@
                 <button onclick="splashOn()" id='check'>Список</button>
             </div>
             <div class='button'>
-                <button onclick="" id='check_v2'>Остаток</button>
+                <button onclick="remain()" id='check_v2'>Остаток</button>
             </div>
         </div>
         <div id="result">
